@@ -24,7 +24,7 @@
 
 		<lombok.version>1.18.30</lombok.version>
 		<lombok-maven.version>1.18.20.0</lombok-maven.version>
-		<slf4j.version>1.7.32</slf4j.version>
+		<slf4j.version>2.0.9</slf4j.version>
 		<junit.version>4.13.1</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<mockito.version>2.27.0</mockito.version>
@@ -35,7 +35,7 @@
 		<jackson.version>2.15.3</jackson.version>
 		<jjwt.version>0.4</jjwt.version>
 		<jgit.version>6.7.0.202309050840-r</jgit.version>
-		<logback.version>1.2.10</logback.version>
+		<logback.version>1.4.11</logback.version>
 
 		<alexandria.organization>g2forge</alexandria.organization>
 		<alexandria.name>Alexandria</alexandria.name>
@@ -116,6 +116,7 @@
 				<configuration>
 					<argLine>
 						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.lang.invoke=ALL-UNNAMED
 					</argLine>
 					<parallel>classes</parallel>
 					<threadCount>8</threadCount>
@@ -132,6 +133,7 @@
 				<configuration>
 					<argLine>
 						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.lang.invoke=ALL-UNNAMED
 					</argLine>
 					<includes>
 						<include>**/Integration*.java</include>
